# CEIA-probabilidad_y_estadistica

./: .gitignore  LICENSE  README.md  pyproject.toml
trabajo1/: README.md
trabajo1/code/: analisis3.ipynb
trabajo1/data/: Datos_primer_TP_22Co2024_a2217.xlsx
trabajo1/docs/: SolucionPrimerExamenPEIA-22Co2025-a2217.tex
trabajo2/: README.md
trabajo2/docs/: Consulta_Ejercicio2_MinimoCuadrados.tex  SolucionSegundoExamenPEIA_22Co2024-a2217.tex
trabajo3/: README.md
trabajo3/code/: analisis_final.ipynb
trabajo3/data/: Datos_TP_final_22Co2025_a2217.xlsx
trabajo3/docs/: SolucionTercer_examen_PEIA_22Co2025.tex
