[project]
name = "ceia-probabilidad-y-estadistica"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.14.2",
]
